Closed Bug 819539 Opened 12 years ago Closed 12 years ago

Bionic's _Unwind_Backtrace always (?) returns an error, so NS_StackWalk should ignore it

Categories

(Core :: XPCOM, defect)

ARM
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla20
Tracking Status
firefox18 --- fixed
firefox19 --- fixed
firefox20 --- fixed

People

(Reporter: justin.lebar+bug, Assigned: justin.lebar+bug)

References

Details

Attachments

(1 file)

See bug 717853 comment 110 for an explanation of why _Unwind_Backtrace returns an error and why it's safe to ignore it.

Patch in a moment.
Attached patch Patch, v1Splinter Review
Attachment #689889 - Flags: review?(mh+mozilla)
Blocks: NewDMD
Assignee: nobody → justin.lebar+bug
Comment on attachment 689889 [details] [diff] [review]
Patch, v1

Review of attachment 689889 [details] [diff] [review]:
-----------------------------------------------------------------

::: xpcom/base/nsStackWalk.cpp
@@ +1212,5 @@
>      info.skip = aSkipFrames + 1;
>      info.closure = aClosure;
>  
>      _Unwind_Reason_Code t = _Unwind_Backtrace(unwind_callback, &info);
> +#if !(defined(ANDROID) && defined(__arm__))

Nit:
#if ...
  // comments
#else

might be better.
Attachment #689889 - Flags: review?(mh+mozilla) → review+
Comment on attachment 689889 [details] [diff] [review]
Patch, v1

[Triage Comment]
a=me for aurora, beta: This simple change blocks newdmd.  Looking through the tree, NS_StackWalk is used by TraceMalloc and (after bug 717853) newdmd.  Since neither of these is on for release builds, and since this code only affects Android builds, this is a safe change.
Attachment #689889 - Flags: approval-mozilla-beta+
Attachment #689889 - Flags: approval-mozilla-aurora+
https://hg.mozilla.org/mozilla-central/rev/18e7c87def37
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: