Bug 819539 - Ignore _Unwind_Backtrace errors on ARM + Android. r=glandium